@@ -9,6 +9,7 @@ ChangeLog for ARQ
     with care to get same effects if value-based
     URIs are always safe to optimize. 
 + Bug fix in filter placement (in code used by TDB only) 
++ Bug fix in filter equality transformation if involving unused an variable. 
 
 ==== ARQ 2.8.1
 
